--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,14 @@
       <link rel="manifest" href="/site.webmanifest" />
       <meta name="msapplication-TileColor" content="#da532c" />
       <meta name="theme-color" content="#ffffff" />
+
    </head>
 
    <body>
       <div id="app"></div>
+
+      <script src="https://kit.fontawesome.com/c1f3f94452.js" crossorigin="anonymous"></script>
+
 
       <script
          src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
